--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.asc.neetk.whatsplaying" >
+    package="com.asc.neetk.whatsplaying">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 
     <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:name=".Appsett"
         android:allowBackup="true"
         android:icon="@mipmap/ic_icon"
 
+
         android:label="WhatsPlayin"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="@string/parse_app_id" />
@@ -25,54 +27,52 @@
         <service
             android:name=".MyService"
             android:enabled="true"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.CONFIGURATION_CHANGED" />
             </intent-filter>
         </service>
 
-            <activity
-                android:name=".fouract"
-                android:excludeFromRecents="true"
-                android:label="@string/title_activity_fouract"
-                android:launchMode="singleInstance"
-                android:taskAffinity=""
-                android:theme="@style/Theme.Transparent" >
-            </activity>
+        <activity
+            android:name=".fouract"
+            android:excludeFromRecents="true"
+            android:label="@string/title_activity_fouract"
+            android:launchMode="singleInstance"
+            android:taskAffinity=""
+            android:theme="@style/Theme.Transparent"></activity>
 
-            <activity
-                android:name=".central"
-                >
+        <activity android:name=".central"
 
-            </activity>
+            >
+
+        </activity>
 
 
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
 
         <activity
             android:name=".LoginSignupActivity"
-            android:label="@string/title_activity_login_signup" >
-        </activity>
+            android:label="@string/title_activity_login_signup"></activity>
 
         <activity
             android:name=".MySongs"
-            android:label="Your History" >
-        </activity>
+            android:label="Your History"></activity>
 
-        <provider android:name=".MyContentProvider" android:exported="true"
-            android:readPermission="true" android:writePermission="true"
-            android:authorities="com.asc.neetk.contentprovider" />
+        <provider
+            android:name=".MyContentProvider"
+            android:authorities="com.asc.neetk.contentprovider"
+            android:exported="true"
+            android:readPermission="true"
+            android:writePermission="true" />
     </application>
-
-
 
 
 </manifest>
