--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
 
         <activity
             android:name=".signupActivity"
-            android:label="@string/title_activity_signup"
+            android:label="Signup"
             android:parentActivityName=".LoginSignupActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -70,7 +70,7 @@
         </activity>
         <activity
             android:name=".forgotPass"
-            android:label="@string/title_activity_forgot_pass"
+            android:label="Forgot Password"
             android:parentActivityName=".LoginSignupActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
