--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
 
+    compile "com.wefika:flowlayout:0.4.0"
+
 }
