--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
     }
 }
 
+
+
+
+
 dependencies {
     compile 'com.soundcloud.android:android-crop:1.0.0@aar'
     compile 'de.hdodenhof:circleimageview:1.3.0'
@@ -30,4 +34,15 @@ dependencies {
 
     compile "com.wefika:flowlayout:0.4.0"
 
+
 }
+
+repositories {
+    jcenter()
+}
+
+dependencies {
+    compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
+    compile 'com.nineoldandroids:library:2.4.+'
+}
+
