--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
 
     compile "com.wefika:flowlayout:0.4.0"
+    compile 'com.github.medyo:dynamicbox:1.1@aar'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 
 
 }
