--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
+
+        renderscriptTargetApi 22
+        renderscriptSupportModeEnabled true
     }
     buildTypes {
         release {
@@ -31,11 +34,12 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
     compile 'com.oguzdev:CircularFloatingActionMenu:1.0.2'
-
-    compile "com.wefika:flowlayout:0.4.0"
+    compile 'com.wefika:flowlayout:0.4.0'
     compile 'com.github.medyo:dynamicbox:1.1@aar'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
-
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
 
 }
 
@@ -48,3 +52,12 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.+'
 }
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
+    compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
+    compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
+}
