--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,9 +38,8 @@
             android:theme="@style/Theme.Transparent" />
         <activity
             android:name=".central"
-            android:launchMode="singleTop"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            >
+            android:launchMode="singleTop" >
         </activity>
         <activity
             android:name=".LoginActivity"
@@ -118,6 +117,10 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.asc.neetk.whatsplaying.central" />
+        </activity>
+        <activity
+            android:name=".playSong"
+            android:label="@string/title_activity_play_song" >
         </activity>
     </application>
 
