--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+    compile project(':soundcloud-0.2.1-jar-with-dependencies')
+    compile 'com.google.android.exoplayer:exoplayer:r1.3.3'
 
 }
 
