--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
+    <service android:name="com.asc.neetk.whatsplaying.MusicService" />
 
     <application
         android:name=".Appsett"
@@ -121,13 +123,21 @@
         </activity>
         <activity
             android:name=".playSong"
-            android:label="@string/title_activity_play_song"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_play_song"
             android:parentActivityName=".central" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.asc.neetk.whatsplaying.central" />
-
+        </activity>
+        <activity
+            android:name=".tutsPlayer"
+            android:label="@string/title_activity_tuts_player"
+            android:parentActivityName=".central"
+            android:launchMode="singleTop">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.asc.neetk.whatsplaying.central" />
         </activity>
     </application>
 
