--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,6 @@
             android:value="@string/parse_client_key" />
 
         <service android:name=".MusicService" />
-
         <service
             android:name=".MyService"
             android:enabled="true"
@@ -97,10 +96,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.asc.neetk.whatsplaying.central" />
         </activity>
-        <activity
-            android:name=".checking"
-            android:label="@string/title_activity_checking" >
-        </activity>
+
         <activity
             android:name=".adapter.userProfile"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -125,17 +121,17 @@
             android:name=".playSong"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="Player"
-             android:parentActivityName=".central" >
+            android:parentActivityName=".central" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.asc.neetk.whatsplaying.central" />
         </activity>
         <activity
             android:name=".tutsPlayer"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_tuts_player"
             android:launchMode="singleTop"
-            android:parentActivityName=".central"
-            android:configChanges="keyboardHidden|orientation|screenSize">
+            android:parentActivityName=".central" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.asc.neetk.whatsplaying.central" />
@@ -143,6 +139,11 @@
         <activity
             android:name=".circbartest"
             android:label="@string/title_activity_circbartest" >
+        </activity>
+        <activity
+            android:name=".guide"
+            android:label="@string/title_activity_guide"
+            android:theme="@style/Theme.Transparent" >
         </activity>
     </application>
 
