--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,13 @@ android {
 }
 
 
+repositories {
+    jcenter()
+    mavenCentral()
+}
+
+
+
 
 
 
@@ -47,24 +54,20 @@ dependencies {
      compile project(':seekArc_library')
     compile 'com.squareup.picasso:picasso:2.5.2'
 
-}
 
-repositories {
-    jcenter()
-}
-
-dependencies {
     compile 'com.github.navasmdc:MaterialDesign:1.5@aar'
     compile 'com.nineoldandroids:library:2.4.+'
-}
 
-repositories {
-    mavenCentral()
-}
-
-dependencies {
 
     compile 'com.nhaarman.listviewanimations:lib-core:3.1.0@aar'
     compile 'com.nhaarman.listviewanimations:lib-manipulation:3.1.0@aar'
     compile 'com.nhaarman.listviewanimations:lib-core-slh:3.1.0@aar'
+
+
+    compile 'com.android.support:cardview-v7:21.0.+'
+
+
 }
+
+
+
