--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
 
     compile 'com.android.support:cardview-v7:21.0.+'
 
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
+
 
 }
 
