--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,9 @@ dependencies {
 
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
 
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.1.+'
+
+
 
 }
 
