--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.asc.neetk.whatsplaying" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.asc.neetk.whatsplaying">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -10,9 +11,13 @@
     <application
         android:name=".Appsett"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_icon"
+         android:icon="@mipmap/ic_icon"
         android:label="WhatsPlayin"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+
+
+       >
+
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="@string/parse_app_id" />
